--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "robofriends",
+  "homepage": "https://iriswdq0504.github.io/robofriends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "gh-pages": "^3.1.0",
+    "react": "^17.0.0-rc.3",
+    "react-dom": "^17.0.0-rc.3",
     "react-scripts": "^3.4.3",
     "tachyons": "^4.12.0"
   },
@@ -12,10 +14,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
-    "production": [ 
+    "production": [
       ">0.2%",
       "not dead",
       "not op_mini all"
